// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert deeplyCopy should convert array of nodes 1`] = `
{
  "amdDependencies": [],
  "bindDiagnostics": [],
  "bindSuggestionDiagnostics": undefined,
  "checkJsDirective": undefined,
  "commentDirectives": undefined,
  "endOfFileToken": {
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
      },
      "start": {
        "column": 12,
        "line": 1,
      },
    },
    "range": [
      12,
      12,
    ],
    "type": "TSEndOfFileToken",
  },
  "externalModuleIndicator": undefined,
  "fileName": "text.ts",
  "hasNoDefaultLib": false,
  "identifierCount": 2,
  "identifiers": Map {
    "foo" => "foo",
    "T" => "T",
  },
  "isDeclarationFile": false,
  "languageVariant": 1,
  "languageVersion": 99,
  "libReferenceDirectives": [],
  "lineMap": [
    null,
  ],
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "nodeCount": 8,
  "parseDiagnostics": [],
  "pragmas": Map {},
  "range": [
    0,
    12,
  ],
  "referencedFiles": [],
  "scriptKind": 4,
  "setExternalModuleIndicator": [Function],
  "statements": [
    {
      "directive": undefined,
      "expression": {
        "arguments": [],
        "callee": {
          "decorators": [],
          "loc": {
            "end": {
              "column": 7,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "name": "foo",
          "optional": false,
          "range": [
            4,
            7,
          ],
          "type": "Identifier",
          "typeAnnotation": undefined,
        },
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          12,
        ],
        "type": "NewExpression",
        "typeArguments": {
          "loc": {
            "end": {
              "column": 10,
              "line": 1,
            },
            "start": {
              "column": 7,
              "line": 1,
            },
          },
          "params": [
            {
              "loc": {
                "end": {
                  "column": 9,
                  "line": 1,
                },
                "start": {
                  "column": 8,
                  "line": 1,
                },
              },
              "range": [
                8,
                9,
              ],
              "type": "TSTypeReference",
              "typeArguments": undefined,
              "typeName": {
                "decorators": [],
                "loc": {
                  "end": {
                    "column": 9,
                    "line": 1,
                  },
                  "start": {
                    "column": 8,
                    "line": 1,
                  },
                },
                "name": "T",
                "optional": false,
                "range": [
                  8,
                  9,
                ],
                "type": "Identifier",
                "typeAnnotation": undefined,
              },
            },
          ],
          "range": [
            7,
            10,
          ],
          "type": "TSTypeParameterInstantiation",
        },
      },
      "loc": {
        "end": {
          "column": 12,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        12,
      ],
      "type": "ExpressionStatement",
    },
  ],
  "text": "new foo<T>()",
  "type": "TSSourceFile",
  "typeReferenceDirectives": [],
}
`;

exports[`convert deeplyCopy should convert node correctly 1`] = `
{
  "body": [
    {
      "loc": {
        "end": {
          "column": 35,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "name": {
        "escapedText": "foo",
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
          },
          "start": {
            "column": 5,
            "line": 1,
          },
        },
        "originalKeywordKind": undefined,
        "range": [
          5,
          8,
        ],
        "type": "TSUnparsedPrologue",
      },
      "range": [
        0,
        35,
      ],
      "type": "TSUnparsedPrologue",
      "typeAnnotation": null,
      "typeParameters": null,
    },
  ],
  "comments": undefined,
  "loc": {
    "end": {
      "column": 35,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    35,
  ],
  "sourceType": "script",
  "tokens": undefined,
  "type": "Program",
}
`;

exports[`convert deeplyCopy should convert node with decorators correctly 1`] = `
{
  "decorators": [
    {
      "expression": {
        "decorators": [],
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 1,
            "line": 1,
          },
        },
        "name": "test",
        "optional": false,
        "range": [
          1,
          5,
        ],
        "type": "Identifier",
        "typeAnnotation": undefined,
      },
      "loc": {
        "end": {
          "column": 5,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        5,
      ],
      "type": "Decorator",
    },
  ],
  "loc": {
    "end": {
      "column": 18,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "members": [],
  "name": {
    "decorators": [],
    "loc": {
      "end": {
        "column": 15,
        "line": 1,
      },
      "start": {
        "column": 12,
        "line": 1,
      },
    },
    "name": "foo",
    "optional": false,
    "range": [
      12,
      15,
    ],
    "type": "Identifier",
    "typeAnnotation": undefined,
  },
  "range": [
    0,
    18,
  ],
  "type": "TSClassDeclaration",
  "typeParameters": null,
}
`;

exports[`convert deeplyCopy should convert node with type arguments correctly 1`] = `
{
  "arguments": [],
  "expression": {
    "decorators": [],
    "loc": {
      "end": {
        "column": 7,
        "line": 1,
      },
      "start": {
        "column": 4,
        "line": 1,
      },
    },
    "name": "foo",
    "optional": false,
    "range": [
      4,
      7,
    ],
    "type": "Identifier",
    "typeAnnotation": undefined,
  },
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    12,
  ],
  "type": "TSNewExpression",
  "typeArguments": {
    "loc": {
      "end": {
        "column": 10,
        "line": 1,
      },
      "start": {
        "column": 7,
        "line": 1,
      },
    },
    "params": [
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "TSTypeReference",
        "typeArguments": undefined,
        "typeName": {
          "decorators": [],
          "loc": {
            "end": {
              "column": 9,
              "line": 1,
            },
            "start": {
              "column": 8,
              "line": 1,
            },
          },
          "name": "T",
          "optional": false,
          "range": [
            8,
            9,
          ],
          "type": "Identifier",
          "typeAnnotation": undefined,
        },
      },
    ],
    "range": [
      7,
      10,
    ],
    "type": "TSTypeParameterInstantiation",
  },
}
`;

exports[`convert deeplyCopy should convert node with type parameters correctly 1`] = `
{
  "loc": {
    "end": {
      "column": 15,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "members": [],
  "name": {
    "decorators": [],
    "loc": {
      "end": {
        "column": 9,
        "line": 1,
      },
      "start": {
        "column": 6,
        "line": 1,
      },
    },
    "name": "foo",
    "optional": false,
    "range": [
      6,
      9,
    ],
    "type": "Identifier",
    "typeAnnotation": undefined,
  },
  "range": [
    0,
    15,
  ],
  "type": "TSClassDeclaration",
  "typeParameters": {
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
      },
      "start": {
        "column": 9,
        "line": 1,
      },
    },
    "params": [
      {
        "constraint": undefined,
        "default": undefined,
        "in": false,
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "name": {
          "decorators": [],
          "loc": {
            "end": {
              "column": 11,
              "line": 1,
            },
            "start": {
              "column": 10,
              "line": 1,
            },
          },
          "name": "T",
          "optional": false,
          "range": [
            10,
            11,
          ],
          "type": "Identifier",
          "typeAnnotation": undefined,
        },
        "out": false,
        "range": [
          10,
          11,
        ],
        "type": "TSTypeParameter",
      },
    ],
    "range": [
      9,
      12,
    ],
    "type": "TSTypeParameterDeclaration",
  },
}
`;
